--- a/aurora-db/serverless.yml
+++ b/aurora-db/serverless.yml
@@ -43,71 +43,85 @@ plugins:
   - serverless-offline
   - serverless-prune-plugin
 
-functions:
-  queryDB:
-    handler: functions/handler.queryDB
-    events:
-      - http:
-          path: query
-          method: post
+package:
+  patterns:
+    - "node_modules/@prisma/client/**"
+    - "node_modules/aws-sdk/**"
+    - "node_modules/prisma/**"
 
-  getAllAssignments:
-    handler: functions/assignments/getAllAssignments.handler
-    events:
-      - http:
-          path: /get-assignments
-          method: get
+functions:
+  # queryDB:
+  #   handler: functions/handler.queryDB
+  #   events:
+  #     - http:
+  #         path: query
+  #         method: post
+
+  # getAllAssignments:
+  #   handler: functions/assignments/getAllAssignments.handler
+  #   events:
+  #     - http:
+  #         path: /get-assignments
+  #         method: get
 
   ## ---------Lessons functions---------
-  createLesson:
-    handler: functions/lessons/createLesson.handler
-    events:
-      - http:
-          path: /create-lesson
-          method: post
-          private: true
-          cors: true
+  # createLesson:
+  #   handler: functions/lessons/createLesson.handler
+  #   events:
+  #     - http:
+  #         path: /create-lesson
+  #         method: post
+  #         private: true
+  #         cors: true
 
-  getLessons:
-    handler: functions/lessons/getLessons.handler
-    events:
-      - http:
-          path: /get-lessons
-          method: get
-          private: true
-          cors: true
+  # getLessons:
+  #   handler: functions/lessons/getLessons.handler
+  #   events:
+  #     - http:
+  #         path: /get-lessons
+  #         method: get
+  #         private: true
+  #         cors: true
 
-  getSingleLesson:
-    handler: functions/lessons/getSingleLesson.handler
-    events:
-      - http:
-          path: lesson/{id}
-          method: get
-          private: true
-          cors: true
+  # getSingleLesson:
+  #   handler: functions/lessons/getSingleLesson.handler
+  #   events:
+  #     - http:
+  #         path: lesson/{id}
+  #         method: get
+  #         private: true
+  #         cors: true
 
-  updateLesson:
-    handler: functions/lessons/updateLesson.handler
-    events:
-      - http:
-          path: lesson/{id}
-          method: put
-          private: true
-          cors: true
+  # updateLesson:
+  #   handler: functions/lessons/updateLesson.handler
+  #   events:
+  #     - http:
+  #         path: lesson/{id}
+  #         method: put
+  #         private: true
+  #         cors: true
 
-  deleteLesson:
-    handler: functions/lessons/deleteLesson.handler
+  # deleteLesson:
+  #   handler: functions/lessons/deleteLesson.handler
+  #   events:
+  #     - http:
+  #         path: lesson/{id}
+  #         method: delete
+  #         private: true
+  #         cors: true
+  # createUserSchema:
+  #   handler: functions/schemas/createUserSchema.handler
+  #   events:
+  #     - http:
+  #         path: /create-schema
+  #         method: POST
+  #         private: true
+  #         cors: true
+  runSolution:
+    handler: functions/queries/runSolution.handler
     events:
       - http:
-          path: lesson/{id}
-          method: delete
-          private: true
-          cors: true
-  createUserSchema:
-    handler: functions/schemas/createUserSchema.handler
-    events:
-      - http:
-          path: /create-schema
+          path: /run-solution
           method: POST
           private: true
           cors: true
