--- a/aurora-db/package.json
+++ b/aurora-db/package.json
@@ -12,11 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.7",
-    "pg": "^8.13.1",
     "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-pseudo-parameters": "^2.6.1",
-    "slugify": "^1.6.6"
+    "serverless-pseudo-parameters": "^2.6.1"
   },
   "devDependencies": {
     "prisma": "^6.3.1",
