--- a/aurora-db/package.json
+++ b/aurora-db/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.751.0",
     "@prisma/client": "^6.3.1",
-    "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.7",
+    "lodash": "^4.17.21",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-pseudo-parameters": "^2.6.1"
   },
