feat: implement getUserSubmissions function to fetch latest submissions by user and enrich with user details

--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -247,6 +247,15 @@ functions:
           private: true
           cors: true
 
+  getUserSubmissions:
+    handler: functions/submissions/getUserSubmissions.handler
+    events:
+      - http:
+          path: /get-user-submissions
+          method: get
+          private: true
+          cors: true
+
   getBlogs:
     handler: functions/blogs/getBlogs.handler
     events:
