feat: add DATABASE_AGGREGATED_TABLE and related configurations in serverless.yml

--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -21,6 +21,7 @@ custom:
   questionsTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.QUESTIONS_TABLE}
   tagsTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.TAGS_TABLE}
   companiesTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.COMPANIES_TABLE}
+  databaseAggregationTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.DATABASE_AGGREGATED_TABLE}
 
   COGNITO_CALLBACK_URLS:
     dev:
@@ -62,6 +63,7 @@ provider:
     QUESTIONS_TABLE: db-kompare-questions-${self:provider.stage}
     TAGS_TABLE: db-kompare-tags-${self:provider.stage}
     COMPANIES_TABLE: db-kompare-companies-${self:provider.stage}
+    DATABASE_AGGREGATED_TABLE: db-kompare-database-aggregated-${self:provider.stage}
     STACK_API_KEY: ${env:STACK_API_KEY}
     GITHUB_TOKEN: ${env:GITHUB_TOKEN}
     GOOGLE_API_KEY: ${env:GOOGLE_API_KEY}
@@ -98,6 +100,7 @@ provider:
             - ${self:custom.databasesTableArn}/index/byStatus
             - ${self:custom.questionsTableArn}/index/byStatus
             - ${self:custom.questionsTableArn}
+            - ${self:custom.databaseAggregationTableArn}
             - ${self:custom.tagsTableArn}/index/byStatus
             - ${self:custom.tagsTableArn}
             - ${self:custom.companiesTableArn}/index/byStatus
