--- a/resources/serverless.yml
+++ b/resources/serverless.yml
@@ -310,6 +310,23 @@ resources:
             Projection:
               ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
+    # Database Aggregated Records Table
+    DatabaseAggregated:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: db-kompare-database-aggregated-${self:provider.stage}
+        DeletionProtectionEnabled: true
+        AttributeDefinitions:
+          - AttributeName: period_key
+            AttributeType: S
+          - AttributeName: database_id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: database_id
+            KeyType: HASH
+          - AttributeName: period_key
+            KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
 
     # DB Tool Metrices Table
     DBToolMetrices:
@@ -395,35 +412,35 @@ resources:
             Projection:
               ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
-    Comments:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: db-kompare-comments-${self:provider.stage}
-        # DeletionProtectionEnabled: false
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-          - AttributeName: databaseId
-            AttributeType: S
-          - AttributeName: repliedTo
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-        BillingMode: PAY_PER_REQUEST
-        GlobalSecondaryIndexes:
-          - IndexName: byRepliedTo
-            KeySchema:
-              - AttributeName: repliedTo
-                KeyType: HASH
-            Projection:
-              ProjectionType: ALL
-          - IndexName: byDatabaseId
-            KeySchema:
-              - AttributeName: databaseId
-                KeyType: HASH
-            Projection:
-              ProjectionType: ALL
+    # Comments:
+    #   Type: AWS::DynamoDB::Table
+    #   Properties:
+    #     TableName: db-kompare-comments-${self:provider.stage}
+    #     # DeletionProtectionEnabled: false
+    #     AttributeDefinitions:
+    #       - AttributeName: id
+    #         AttributeType: S
+    #       - AttributeName: databaseId
+    #         AttributeType: S
+    #       - AttributeName: repliedTo
+    #         AttributeType: S
+    #     KeySchema:
+    #       - AttributeName: id
+    #         KeyType: HASH
+    #     BillingMode: PAY_PER_REQUEST
+    #     GlobalSecondaryIndexes:
+    #       - IndexName: byRepliedTo
+    #         KeySchema:
+    #           - AttributeName: repliedTo
+    #             KeyType: HASH
+    #         Projection:
+    #           ProjectionType: ALL
+    #       - IndexName: byDatabaseId
+    #         KeySchema:
+    #           - AttributeName: databaseId
+    #             KeyType: HASH
+    #         Projection:
+    #           ProjectionType: ALL
     TrackingResources:
       Type: "AWS::DynamoDB::Table"
       Properties:
