feat: add aggregation type support in metrics fetching and enhance serverless configurations

--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -101,6 +101,7 @@ provider:
             - ${self:custom.questionsTableArn}/index/byStatus
             - ${self:custom.questionsTableArn}
             - ${self:custom.databaseAggregationTableArn}
+            - ${self:custom.databaseAggregationTableArn}/index/byAggregationType
             - ${self:custom.tagsTableArn}/index/byStatus
             - ${self:custom.tagsTableArn}
             - ${self:custom.companiesTableArn}/index/byStatus
