--- a/resources/serverless.yml
+++ b/resources/serverless.yml
@@ -321,11 +321,22 @@ resources:
             AttributeType: S
           - AttributeName: database_id
             AttributeType: S
+          - AttributeName: aggregation_type
+            AttributeType: S
         KeySchema:
           - AttributeName: database_id
             KeyType: HASH
           - AttributeName: period_key
             KeyType: RANGE
+        GlobalSecondaryIndexes:
+          - IndexName: byAggregationType
+            KeySchema:
+              - AttributeName: aggregation_type
+                KeyType: HASH
+              - AttributeName: period_key
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
 
     # DB Tool Metrices Table
