--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -23,6 +23,7 @@ custom:
   companiesTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.COMPANIES_TABLE}
   databaseAggregationTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.DATABASE_AGGREGATED_TABLE}
   dbToolsAggregationTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.DB_TOOLS_AGGREGATED_TABLE}
+  submissionsTableArn: arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.SUBMISSIONS_TABLE}
 
   COGNITO_CALLBACK_URLS:
     dev:
@@ -30,11 +31,14 @@ custom:
         - http://localhost:3000/auth
         - https://db-kompare-frontend.vercel.app
         - https://db-kompare-frontend.vercel.app/auth
+        - https://www.dbkompare.com
+        - https://www.dbkompare.com/auth
   COGNITO_LOGOUT_URLS:
     dev:
       urls:
         - http://localhost:3000
         - https://db-kompare-frontend.vercel.app
+        - https://www.dbkompare.com
   serverless-offline:
     httpPort: 4000
 
@@ -66,6 +70,7 @@ provider:
     COMPANIES_TABLE: db-kompare-companies-${self:provider.stage}
     DATABASE_AGGREGATED_TABLE: db-kompare-database-aggregated-${self:provider.stage}
     DB_TOOLS_AGGREGATED_TABLE: db-kompare-dbtools-aggregated-${self:provider.stage}
+    SUBMISSIONS_TABLE: db-kompare-submissions-${self:provider.stage}
     STACK_API_KEY: ${env:STACK_API_KEY}
     GITHUB_TOKEN: ${env:GITHUB_TOKEN}
     GOOGLE_API_KEY: ${env:GOOGLE_API_KEY}
@@ -106,6 +111,9 @@ provider:
             - ${self:custom.dbToolsAggregationTableArn}
             - ${self:custom.databaseAggregationTableArn}/index/byAggregationType
             - ${self:custom.dbToolsAggregationTableArn}/index/byAggregationType
+            - ${self:custom.submissionsTableArn}
+            - ${self:custom.submissionsTableArn}/index/byUserId
+            - ${self:custom.submissionsTableArn}/index/byQuestionId
             - ${self:custom.tagsTableArn}/index/byStatus
             - ${self:custom.tagsTableArn}
             - ${self:custom.companiesTableArn}/index/byStatus
@@ -236,7 +244,23 @@ functions:
           method: post
           private: true
           cors: true
+  getSubmissions:
+    handler: functions/submissions/getSubmissions.handler
+    events:
+      - http:
+          path: /get-submissions
+          method: get
+          private: true
+          cors: true
 
+  getUserSubmissions:
+    handler: functions/submissions/getUserSubmissions.handler
+    events:
+      - http:
+          path: /get-user-submissions
+          method: get
+          private: true
+          cors: true
   getBlogs:
     handler: functions/blogs/getBlogs.handler
     events:
@@ -469,6 +493,13 @@ functions:
       - schedule:
           rate: cron(50 6 * * ? *) # Runs daily at 6:50 AM UTC
 
+  # DB TOOL AGGREGATED UPDATE SCHEDULE
+  addDbToolAggregation:
+    handler: functions/dbtools-metrices/addDbToolAggregation.handler
+    events:
+      - schedule:
+          rate: cron(50 6 * * ? *) # Runs daily at 6:50 AM UTC
+
   # DATABASE GITHUB METRICES SCHEDULE
   getGithubMetrices:
     handler: functions/metrices/getGithubMetrices.handler
@@ -539,6 +570,13 @@ functions:
   # DATABASE RANKING UPDATE SCHEDULE
   addRanking:
     handler: functions/rankings/addRanking.handler
+    events:
+      - schedule:
+          rate: cron(10 6 * * ? *) # Runs daily at 6:10 AM UTC
+
+  # DATABASE AGGREGATED UPDATE SCHEDULE
+  addDatabaseAggregation:
+    handler: functions/metrices/addDatabaseAggregation.handler
     events:
       - schedule:
           rate: cron(10 6 * * ? *) # Runs daily at 6:10 AM UTC
