--- a/resources/serverless.yml
+++ b/resources/serverless.yml
@@ -450,35 +450,35 @@ resources:
             Projection:
               ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
-    # Comments:
-    #   Type: AWS::DynamoDB::Table
-    #   Properties:
-    #     TableName: db-kompare-comments-${self:provider.stage}
-    #     # DeletionProtectionEnabled: false
-    #     AttributeDefinitions:
-    #       - AttributeName: id
-    #         AttributeType: S
-    #       - AttributeName: databaseId
-    #         AttributeType: S
-    #       - AttributeName: repliedTo
-    #         AttributeType: S
-    #     KeySchema:
-    #       - AttributeName: id
-    #         KeyType: HASH
-    #     BillingMode: PAY_PER_REQUEST
-    #     GlobalSecondaryIndexes:
-    #       - IndexName: byRepliedTo
-    #         KeySchema:
-    #           - AttributeName: repliedTo
-    #             KeyType: HASH
-    #         Projection:
-    #           ProjectionType: ALL
-    #       - IndexName: byDatabaseId
-    #         KeySchema:
-    #           - AttributeName: databaseId
-    #             KeyType: HASH
-    #         Projection:
-    #           ProjectionType: ALL
+    Comments:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: db-kompare-comments-${self:provider.stage}
+        DeletionProtectionEnabled: true
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: entityId
+            AttributeType: S
+          - AttributeName: repliedTo
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
+        GlobalSecondaryIndexes:
+          - IndexName: byRepliedTo
+            KeySchema:
+              - AttributeName: repliedTo
+                KeyType: HASH
+            Projection:
+              ProjectionType: ALL
+          - IndexName: byEntityId
+            KeySchema:
+              - AttributeName: entityId
+                KeyType: HASH
+            Projection:
+              ProjectionType: ALL
     TrackingResources:
       Type: "AWS::DynamoDB::Table"
       Properties:
