feat: add getSubmissionProgress function to track user submission progress by question difficulty

--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -261,6 +261,16 @@ functions:
           method: get
           private: true
           cors: true
+
+  getSubmissionProgress:
+    handler: functions/submissions/getSubmissionProgress.handler
+    events:
+      - http:
+          path: /get-submission-progress
+          method: get
+          private: true
+          cors: true
+
   getBlogs:
     handler: functions/blogs/getBlogs.handler
     events:
