--- a/aurora-db/package.json
+++ b/aurora-db/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "@dbml/core": "^3.10.2",
     "@prisma/client": "^6.3.1",
     "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
